# HERMES

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
contracts/: README.md
contracts/silver/: customers.yml  inventory_snapshots.yml  order.yml  product.yml  stores.yml
databricks/notebooks/: adls_test.py  run_hermes_batch_pipeline_azure.py  silver_table_registration.py
dbt_hermes/: dbt_project.yml  package-lock.yml  profiles.yml.example
devlog/: DEVLOG.md
docs/: azure_databricks_CLI_commands.md  azure_permissions.md  azure_storage_layout.md  data_quality.md  data_sources.md  dbt_gold_data_modelling.md  delivery_plan.md  hermes_lakehouse_design.md  hermes_project_brief.md  local_batch_pipeline_orchestration.md  runtime_configuration_settings.md  silver_layer.md  silver_table_registration.md  unity_catalog.md
docs/adr/: ADR-001-project-delivery-scope.md  ADR-002-Pivot-to-Batch-First-Strategy.md
infra/terraform/: data_factory.tf  databricks.tf  hermes_terraform.md  key_vault.tf  locals.tf  main.tf  monitoring.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
inspection/: inspect_silver_col_level_quarantine.ipynb
tests/integration/: test_bronze_silver_transform.py  test_data_quarantine.py  test_silver_contract_validation.py  test_table_relationship_validation.py
tests/unit/: test_bronze_ingestion.py  test_config_paths.py  test_contract_validation_runtime.py  test_hermes_generate_batch.py  test_local_batch_orchestration.py  test_packaged_yaml_contracts.py  test_quarantine_runtime.py  test_runtime_settings.py
(+39 files in other folders)
